build.gradle: Adding plugins-dev compilation.